<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:layout_margin="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_number_account"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginBottom="16dp"/>
    <TextView
            android:id="@+id/userNumberAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="106"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userLoginTextView"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textColor="@android:color/black"
            android:textSize="20sp" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textView3" android:layout_marginBottom="16dp"/>
    <TextView
            android:id="@+id/userLoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="admin"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNumberAccountTextView"
            app:layout_constraintBottom_toTopOf="@+id/userEmailTextView" android:layout_marginBottom="16dp"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@android:color/black"
            android:textSize="20sp" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="admin@gmil.com"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userDiscountTextView"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/userLoginTextView"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textColor="@android:color/black"
            android:textSize="20sp" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="16dp"/>
    <TextView
            android:id="@+id/userDiscountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="10%"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmailTextView"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>