<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/singInKabinetButton"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/cars"/>
    <Button
            android:text="@string/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/calculateShippingCostButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" android:textSize="24sp" android:padding="8dp"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" android:id="@+id/singInKabinetButton"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/trakingOrderButton" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/calculateShippingCostButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:textSize="20sp" android:textColor="@color/white"
            android:background="@color/colorPrimary" android:padding="8dp" android:text="@string/tracking_order"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateShippingCostButton"
            app:layout_constraintBottom_toTopOf="@+id/trakingOrderButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singInKabinetButton"
            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
            android:text="@string/calculate_shipping_cost" android:textSize="20sp" android:textColor="@color/white"
            android:padding="8dp" android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>